--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <!-- Challenge 1: Select the element span with id "user" and write a function to print your name on the page, when the page loads using innerHTML within the element span with id "user" using onload() method. -->
     <h1>Hello <span id="user"></span>!!</h1>
+    <script src="script.js"></script>
     <!-- Challenge 2: Select the button with button id "btn-click"and write the function to change the background color of the button using onclick() method. -->
     <button id="btn-click">change</button>
     <!-- Challenge 3: Create a function "makeSentence", add an event listener to the button with id "build-button" and call the function "makeSentence" when the button is clicked .In the "makeSentence" function, retrieve the current values of the form input elements which are namely "Noun" "Verb" & "Adverb", make a sentence from them like "Pamela sings loudly", and output that in the "statement" div.-->
